turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:43: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	b=rule(state)(c)(2)
        ^Turmite:44: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	return b
        ^